# tap-namely

./: README.md  meltano.yml  pyproject.toml  tox.ini
tap_namely/: client.py  streams.py  tap.py
